Prevent tall images from occupying too much space

--- a/react/components/messages/PictureBubble.scss
+++ b/react/components/messages/PictureBubble.scss
@@ -1,5 +1,6 @@
 .picture-bubble {
   img {
     margin-bottom: -5px;
+    max-height: 400px;
   }
 }
